hay que corregir

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,7 @@
+
+ <!-- app.component.html -->
 <div>
+    <h1>Distribución de Materiales</h1>
     <canvasjs-chart [options]="chartOptions"></canvasjs-chart>
-</div>
+  </div>
+  
