ya anda el grafico. falta hacer el segundo grafico

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,1 @@
-
- <!-- app.component.html -->
-<div>
-    <h1>Distribución de Materiales</h1>
-    <canvasjs-chart [options]="chartOptions"></canvasjs-chart>
-  </div>
-  
+<router-outlet> </router-outlet>
