--- a/frontend/src/app/grafico/grafico.component.html
+++ b/frontend/src/app/grafico/grafico.component.html
@@ -1,6 +1,13 @@
-<!-- grafico.component.html -->
+
+<button >Generar Gráfico</button>
+<button >Generar Gráfico dias</button>
+<button >Generar Gráfico semanal</button>
+<!-- grafico.component.html
+(click)="generarGraficoSemanal()"
+(click)="generarGraficoDias()" 
+(click)="generarGrafico()"-->
 <div>
     <div id="chartContainer" style="height: 370px; width: 100%;"></div>
-  </div>
+</div>
 
   
