ya se puede cambiar entre graficos y se filtran los materiales que se tiraron en el dia, falta arreglar el grafico de esta semana

--- a/frontend/src/app/grafico-dias/grafico-dias.component.html
+++ b/frontend/src/app/grafico-dias/grafico-dias.component.html
@@ -1,1 +1,8 @@
-<p>grafico-dias works!</p>
+<button (click)="navegarASemana()">Grafico de esta semana</button>
+<button (click)="navegarAHistorico()">Grafico historico</button>
+
+<div>
+    <div id="chartContainer" style="height: 370px; width: 100%;"></div>
+</div>
+
+  
