--- a/frontend/src/app/grafico-semanal/grafico-semanal.component.html
+++ b/frontend/src/app/grafico-semanal/grafico-semanal.component.html
@@ -1,1 +1,8 @@
-<p>grafico-semanal works!</p>
+<button (click)="navegarADia()">Grafico de hoy</button>
+<button (click)="navegarAHistorico()">Grafico historico</button>
+
+<div>
+    <div id="chartContainer" style="height: 370px; width: 100%;"></div>
+</div>
+
+  
