actualice un par de cosas y mejore los botones

--- a/frontend/src/app/grafico-semanal/grafico-semanal.component.html
+++ b/frontend/src/app/grafico-semanal/grafico-semanal.component.html
@@ -1,5 +1,5 @@
-<button (click)="navegarADia()">Grafico de hoy</button>
-<button (click)="navegarAHistorico()">Grafico historico</button>
+<button class="btn btn-semana"  button (click)="navegarADia()">Grafico de hoy</button>
+<button class="btn btn-hoy" button (click)="navegarAHistorico()">Grafico historico</button>
 
 <div>
     <div id="chartContainer" style="height: 370px; width: 100%;"></div>
