--- a/frontend/src/app/grafico/grafico.component.html
+++ b/frontend/src/app/grafico/grafico.component.html
@@ -1,5 +1,5 @@
-<button (click)="navegarASemana()">Grafico de esta semana</button>
-<button (click)="navegarADia()">Grafico de hoy</button>
+<button class="btn btn-semana" (click)="navegarASemana()">Gráfico de esta semana</button>
+<button class="btn btn-hoy" (click)="navegarADia()">Gráfico de hoy</button>
 
 <div>
     <div id="chartContainer" style="height: 370px; width: 100%;"></div>
