--- a/frontend/src/app/grafico-dias/grafico-dias.component.html
+++ b/frontend/src/app/grafico-dias/grafico-dias.component.html
@@ -1,5 +1,5 @@
-<button (click)="navegarASemana()">Grafico de esta semana</button>
-<button (click)="navegarAHistorico()">Grafico historico</button>
+<button class="btn btn-semana" button (click)="navegarASemana()">Grafico de esta semana</button>
+<button class="btn btn-hoy" button (click)="navegarAHistorico()">Grafico historico</button>
 
 <div>
     <div id="chartContainer" style="height: 370px; width: 100%;"></div>
